# python-boilerplate

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: .labeler.yml
.github/workflows/: label.yml  release.yml  test.yml
tests/unit/: unit_test.py
